# CPUTI

./: CMakeLists.txt  README.md  main.cu  run_scaling.py
app/: Type.hpp  io.cpp  io.h  new_ccd.cpp  rational.hpp  read_rational_csv.cpp  read_rational_csv.hpp  test.cpp
cmake/: CPUTI_DownloadExternal.cmake  SIMPLE_TI_Dependencies.cmake  SIMPLE_TI_Utils.cmake
src/: CMakeLists.txt  CType.hpp  Type.hpp  io.cpp  queue.cpp  queue.h  root_finder.cpp  root_finder.h  root_finder_ee.cpp
src/cpu_ti/: cpu_ti.cpp  timer.hpp  type.hpp
